# real_cpp_program

./: CMakeLists.txt  README.md  makefile  makefile_old
data/: submission1.txt
doc/: scheck.mdj
inc/: CSVReporter.h  CommandLine.h  Dictionary.h  Parser.h  Reporter.h  ScheckError.h  Settings.h  dictionary.h  parser.h  scheckerror.h
src/: CSVReporter.cpp  CommandLine.cpp  Parser.cpp  Settings.cpp  main.cpp  parser.cpp
